# GIF-4104

./: .gitignore  .pre-commit-config.yaml
TP1/: CMakeLists.txt  README.md  bench.sh
TP1/src/: main.c  main.cpp  miller-rabin-gmp.cpp
TP2/: .gitignore  CMakeLists.txt  Chrono.hpp  Makefile  RAPPORT.tex  README.md  bench.sh  config.sty  main.cpp  miller-rabin-gmp.hpp
TP2/src/: main.cpp  miller-rabin-gmp.cpp
TP3/: .gitignore  CMakeLists.txt  Matrix.cpp  Matrix.hpp  RAPPORT.tex  README.md  bench.sh  main.cpp  results.csv
TP3/VectorAdd/: VectorAdd.cl  VectorAdd.cpp
TP4/: RAPPORT.tex  res.csv  res_acc.csv
TP4/tp4-openacc/: .clang-format  Makefile  Matrix.cpp  Matrix.hpp  bench.sh  main.cpp
TP4/tp4-opencl/: Makefile  bench.sh  gauss.cl  hello.cpp  main.cpp
TP5/: Main.java  Makefile  RAPPORT.tex  bench.sh  bench_res.csv  config.sty
TP5/data/: python.org.json
TP5/tp5/: Makefile  pom.xml
